styled the header and navbar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel='stylesheet' href='./resources/css/styles.css'>
+    </head>
     <header class='page-header'>
-        <h4>The Mood Shop</h4>
+        <h4>The Mood Shop food</h4>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
