displayed moods with button using javascript

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel='stylesheet' href='./resources/css/styles.css'>
     </head>
+
     <header class='page-header'>
         <h4>The Mood Shop food</h4>
         <nav>
@@ -13,4 +14,14 @@
             </ul>
         </nav>
     </header>
+
+    <main class ='items' id='items'>
+            <!-- Display Moods Here -->
+    </main>
+    
+    <body>
+        <script src='./resources/js/script.js' type="module"></script>
+        <!-- <div><img src= '/resource...' width =300 hieght = 300></div> -->
+    </body>
+    
 </html>
