--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel='stylesheet' href='./resources/css/styles.css'>
     </head>
-
+    <body>
     <header class='page-header'>
         <h4>The Mood Shop food</h4>
         <nav>
@@ -18,8 +18,9 @@
     <main class ='items' id='items'>
             <!-- Display Moods Here -->
     </main>
-    
-    <body>
+    <footer>
+    </footer>
+   
         <script src='./resources/js/script.js' type="module"></script>
         <!-- <div><img src= '/resource...' width =300 hieght = 300></div> -->
     </body>
