connect cart to folder

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
             <!-- Display Moods Here -->
     </main>
     <footer>
+        <div id = "cart-qty">
+
+            <!------Cart qty here-->
+
+        </div>
+        <ul id='item-list'>
+            <!-- cart items -->
+        </ul>
+        
+        <div id = 'cart-total'>
+             <!----total goes here-->
+        </div>
+          
     </footer>
    
         <script src='./resources/js/script.js' type="module"></script>
